--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -11,11 +11,11 @@
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.oslomet.no/" class="img-container" aria-label="Link til hjemmeside">
-        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+    <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
+        <img class="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
-        <a id="search-button" href="https://www.oslomet.no/s?q" aria-label="Søke knapp"><i class="fa fa-search"
+        <a id="search-button" href="https://www.oslomet.no/s?q" aria-label="Søke-knapp"><i class="fa fa-search"
                 alt="Søk"></i></a>
         <div class="dropdown">
             <button class="dropbtn" id="menu-button" aria-label="Navigeringsmeny"><i class="fa fa-bars"
