changed a few margins on index page to make it structured a little better

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h1>Matematisk modellering og datavitenskap - ingeniør</h1>
         <article id="main-content">
             <h2>Bachelorprogram</h2>
+            <hr id="hr-title-separator">
             <section id="course-key-points">
                 <div class="detail-box">
                     <h3>Studiested: </h3>
@@ -226,7 +227,7 @@
                         Valgfritt emne
                     </p>
                     <p id="double-angle-symbol-explainer">
-                        <i class="fa fa-angle-double-right" alt=" doblet vinklet til høyre pil"></i>
+                        <i class="fa fa-angle-double-right" alt="doblet vinklet til høyre pil"></i>
                         Løper over flere semestre
                     </p>
 
