changed the mailto link to open in new tab with target="_blank"

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
                         <p>førsteamanuensis</p>
                         <!-- hva er førsteamanuensis -->
                         <p>+47 673 37 240 <span class="divider">|</span> <a
-                                href="mailto:kristoffer.hellton@oslomet.no">kristoffer.hellton@oslomet.no</a></p>
+                                href="mailto:kristoffer.hellton@oslomet.no" target=”_blank”>kristoffer.hellton@oslomet.no</a></p>
                     </div>
                 </div>
             </section>
