accessibility images structure, id class change

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 <body>
     <div id="site-background"></div>
     <main>
-        <div class="video-container">
-            <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen
-                title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
-                <!--URL to film from https://www.oslomet.no/studier/tkd/matematisk-modellering-datavitenskap inspection -->
-            </iframe>
-        </div>
-        <h1>Matematisk modellering og datavitenskap - ingeniør</h1>
-        <article id="main-content">
+        <article>
+            <div class="video-container">
+                <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483" allowfullscreen
+                    title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
+                    <!--URL to film from https://www.oslomet.no/studier/tkd/matematisk-modellering-datavitenskap inspection -->
+                </iframe>
+            </div>
+            <h1>Matematisk modellering og datavitenskap - ingeniør</h1>
             <h2>Bachelorprogram</h2>
             <hr id="hr-title-separator">
+        </article>
+        <article id="main-content">
             <section id="course-key-points">
                 <div class="detail-box">
                     <h3>Studiested: </h3>
@@ -81,7 +83,6 @@
             </section>
 
             <section id="course-info-tabs">
-                </h2>
                 <div class="tab">
                     <button class="tablinks" onclick="openTab(event, 'Studiestart')">Studiestart</button>
                     <button class="tablinks" onclick="openTab(event, 'Opptakskrav-og-poeng')">Opptakskrav og
@@ -925,78 +926,80 @@
                     <a id="tabcontent-btt" href="#course-info-tabs"><button>
                             <h3>Tilbake til toppen</h3>
                         </button></a>
-            </section>
+                    <!--End of Studietsoppbygging-->
+                </div>
 
-            <section id="Hvordan-foregår-undervisningen?" class="tabcontent">
-                <h2>Hvordan foregår undervisningen?</h2>
-                <p>Undervisningen er en kombinasjon av
-                <ul>
-                    <li>prosjektarbeid</li>
-                    <li>workshop</li>
-                    <li>presentasjoner</li>
-                    <li>veiledninger</li>
-                    <li>diskusjoner og refleksjoner</li>
-                    <li>forelesninger</li>
-                    <li>selvstudier</li>
-                    <li>gruppearbeid</li>
-                    <li>arbeidslivsrelevant bacheloroppgave</li>
-                </ul>
-                For å gjennomføre studiet på normert tid, må du regne med å bruke om lag 40 timer per uke på
-                studierelatert arbeid gjennom hele semesteret.
-                </p>
-            </section>
+                <div id="Hvordan-foregår-undervisningen?" class="tabcontent">
+                    <h2>Hvordan foregår undervisningen?</h2>
+                    <p>Undervisningen er en kombinasjon av
+                    <ul>
+                        <li>prosjektarbeid</li>
+                        <li>workshop</li>
+                        <li>presentasjoner</li>
+                        <li>veiledninger</li>
+                        <li>diskusjoner og refleksjoner</li>
+                        <li>forelesninger</li>
+                        <li>selvstudier</li>
+                        <li>gruppearbeid</li>
+                        <li>arbeidslivsrelevant bacheloroppgave</li>
+                    </ul>
+                    For å gjennomføre studiet på normert tid, må du regne med å bruke om lag 40 timer per uke på
+                    studierelatert arbeid gjennom hele semesteret.
+                    </p>
+                </div>
 
-            <section id="Hva-koster-det?" class="tabcontent">
-                <h2>Hva koster det?</h2>
-                <p>Det er ikke studieavgift på dette studiet. <a class="course-info-links"
-                        href="https://student.oslomet.no/semesteravgift">Du
-                        betaler en semesteravgift hvert semester (student.oslomet.no).</a></p>
-            </section>
-
-            <section id="Hva-kan-du-jobbe-som?" class="tabcontent">
-                <h2>Hva kan du jobbe som?</h2>
-                <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
-                    spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
-                </p>
-                <p>
-                    Spesialiseringen i matematikk og fysikk retter seg mer mot videre studier, men også her får du
-                    etterspurt kompetanse i arbeidslivet etter bachelorstudiet.
-                </p>
-                <p>
-                    Matematisk modellering og datavitenskap blir stadig viktigere som basisgrunnlag, i for eksempel
-                    beregninger knyttet til klima, forsikring og finans, og datadrevne metoder for verdiskaping.
-                </p>
-                <p>
-                    Datadrevne metoder og maskinlæring er i dag svært mye brukt i arbeidslivet.
-                </p>
-            </section>
-
-            <section id="Utveksling" class="tabcontent">
-                <h2>Utveksling</h2>
-                <p>Du kan dra på utveksling i femte semester.</p>
-            </section>
-
-            <section id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
-                <h2>Videre studiemuligheter ved OsloMet</h2>
-                <a class="course-glance-container"
-                    href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
-                    <div class="course-glance">
-
-                        <h3>Anvendt data- og informasjonsteknologi (ACIT)</h3>
-                        <div class="course-glance-points">
-                            <p>Masterprogram</p>
-                            <p>2 år</p>
-                            <p>Pilestredet i Oslo</p>
-                            <p>Heltid</p>
-                        </div>
+                <div id="Hva-koster-det?" class="tabcontent">
+                    <h2>Hva koster det?</h2>
+                    <p>Det er ikke studieavgift på dette studiet. <a class="course-info-links"
+                            href="https://student.oslomet.no/semesteravgift">Du
+                            betaler en semesteravgift hvert semester (student.oslomet.no).</a></p>
                     </div>
-                    <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                        viewBox="0 0 24 24">
-                        <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                    </svg>
-                </a>
+
+                <div id="Hva-kan-du-jobbe-som?" class="tabcontent">
+                    <h2>Hva kan du jobbe som?</h2>
+                    <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
+                        spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
+                    </p>
+                    <p>
+                        Spesialiseringen i matematikk og fysikk retter seg mer mot videre studier, men også her får du
+                        etterspurt kompetanse i arbeidslivet etter bachelorstudiet.
+                    </p>
+                    <p>
+                        Matematisk modellering og datavitenskap blir stadig viktigere som basisgrunnlag, i for eksempel
+                        beregninger knyttet til klima, forsikring og finans, og datadrevne metoder for verdiskaping.
+                    </p>
+                    <p>
+                        Datadrevne metoder og maskinlæring er i dag svært mye brukt i arbeidslivet.
+                    </p>
+                </div>
+
+                <div id="Utveksling" class="tabcontent">
+                    <h2>Utveksling</h2>
+                    <p>Du kan dra på utveksling i femte semester.</p>
+                </div>
+
+                <div id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
+                    <h2>Videre studiemuligheter ved OsloMet</h2>
+                    <a class="course-glance-container"
+                        href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
+                        <div class="course-glance">
+
+                            <h3>Anvendt data- og informasjonsteknologi (ACIT)</h3>
+                            <div class="course-glance-points">
+                                <p>Masterprogram</p>
+                                <p>2 år</p>
+                                <p>Pilestredet i Oslo</p>
+                                <p>Heltid</p>
+                            </div>
+                        </div>
+                        <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                            viewBox="0 0 24 24">
+                            <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
+                        </svg>
+                    </a>
+                </div>
+                <script src="javascript/index-tabs"></script>
             </section>
-            <script src="javascript/index-tabs"></script>
         </article>
         <article>
             <hr>
@@ -1189,7 +1192,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article class="more-info">
+        <article id="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
@@ -1253,7 +1256,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav class="mediabox">
+        <nav id="mediabox">
 
             <ul class="media">
                 <li>
