--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -59,6 +59,7 @@
                 for å forbedre forutsigbarheten og i tillegg er boksene store nok slik at man ikke sliter med å trykke
                 på riktig boks.
             </p>
+            <img class="img-accessibility" src="../images/css-media-queries.png" alt="Bilde av CSS media queries">
             <p>I koden ønsket vi å unngå feil relatert til opening og closing HTML-tags. Ved å bruke konsekvent og
                 tydelig innrykk blir
                 koden mer lesbar og lett å feilsøke, noe som reduserer risikoen for feil og gjør det enklere for andre
@@ -76,14 +77,13 @@
                 enheter. Dette gjør det også enklere for brukere med tilpassede innstillinger, som synshemmede, å
                 navigere og lese
                 innholdet, noe som er et viktig hensyn for universell utforming.</p>
-            <div class="img-container"></div>
-            <!-- ???? skal denne brukes? ^^^^^ -->
+            <img class="img-accessibility" src="../images/html-structure.png" alt="Bilde av HTML struktur">
         </article>
 
         <article>
             <h2>Automatisert Wawe Test</h2>
-            <img id="img-wawe-test" src="../images/wawe-test.png" alt="Wawe-test resultater bilde">
-            <p>Testen fant noen feil rekkefølger i hierarkiet mellom det siste elementet og footer, det er viktig for å
+            <img class="img-accessibility" src="../images/wawe-test.png" alt="Bilde av Wawe test resultater">
+            <p>Testen fant noen feil ved rekkefølgen i hierarkiet mellom det siste elementet og footer, det er viktig for å
                 styrke strukturen.
                 En annen feil gjelder med funksjonaliteten ved touchscreen. Siden meny åpnet via hover, vil den åpenbart
                 ikke kunne åpnes. Vi fikset dette ved å gjøre at den åpner ved å trykkes på, og lukkes ved å trykkes på
@@ -162,7 +162,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav class="mediabox">
+        <nav id="mediabox">
 
             <ul class="media">
                 <li>
