--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -216,7 +216,7 @@
 
     <!-- Footer Menu -->
     <footer>
-        <article class="more-info">
+        <article id="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
@@ -241,7 +241,7 @@
                 </section>
             </div>
         </article>
-        <nav class="mediabox"></nav>
+        <nav id="mediabox"></nav>
     </footer>
 </body>
 
