--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -98,7 +98,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article class="more-info">
+        <article id="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
@@ -162,7 +162,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav class="mediabox">
+        <nav id="mediabox">
 
             <ul class="media">
                 <li>
