--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -28,25 +28,26 @@
 </header>
 
 <body>
+    <div id="site-background"></div>
     <main>
         <h1 class="github">Github og GIT</h1>
             <div class="img-container-github">
                 <div class="img-item">
                     <h2>Commit History i GIT</h2>
-                    <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 1 commit">
-                    <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 2 commit">
+                    <img src="../images/git history 1.png" alt="bilde 1 commit">
+                    <img src="../images/git history 2 riktig.png" alt="bilde 2 commit">
                 </div>
                 <div class="img-item">
                     <h2>Specific Change i GIT</h2>
                     <img src="../images/git bilde 1.png" alt="bilde 3 commit">
-                    <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 4 commit">
+                    <img src="../images/gitbilde 2.png" alt="bilde 4 commit">
                 </div>
             </div>
         <section id="main-github">
             <div class="split-container">
                 <div class="split-left">
                     <div class="content-box">
-                        <h2>GIT som et versjonskontrollsystem</h2>
+                        <h2 class="github">GIT versjonskontrollsystem</h2>
                         <p>Git er et versjonskontrollsystem, som er et program som holder orden på nye og tidligere
                             filer. Filene slettes ikke, men lagres i en database. Vi bruker GitHub. Dette gjør det mulig
                             å spore filer, eller endringer i kodeprosjektet vårt, og generelt øker orden på prosjektet.
@@ -55,20 +56,19 @@
                     </div>    
                     <hr class="separator centered">
                     <div class="content-box">
-                        <h2>Arbeid samtidig på samme projekt</h2>
-                        <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
-                            for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt vær
-                            utfordrende, og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'. 
+                        <h2 class="github">Bruk av Pull Request og Merge</h2>
+                        <p>Når en branch er ferdig, sendes den over til Github, og der kan andre brukere på projektet se koden. Dette er for å foreslå endringer,
+                            uten å direkte legge koden inn i projektet. Pull requests øker samarbeid mellom brukere, og gjør det lettere å forbedre koden til selve projektet.
+                            Merge er når den foreslåtte koden blir godkjent, og er klar for å integreres til 'main'. Nå er den utviklede branchen ferdig. 
                         </p>
                     </div>    
                 </div>
                 <div class="split-right">
                     <div class="content-box">
-                        <h2>Bruk av Pull requests og Merge</h2>
-                        <p>Når en branch er ferdig, sendes den over til Github, og der kan andre brukere på projektet se koden.
-                            Dette er for å foreslå endringer, uten å direkte legge koden inn i projektet. Pull requests øker
-                            samarbeid mellom brukere, og gjør det lettere å forbedre koden til selve projektet. Merge er når 
-                            den foreslåtte koden blir godkjent, og er klar for å integreres til 'main'. Nå er den utviklede branchen ferdig. </p>
+                        <h2>Arbeid samtidig på samme projekt</h2>
+                        <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
+                            for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt vær
+                            utfordrende, og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'.</p>
                     </div>    
                     <hr class="separator centered">
                     <div class="content-box">
