--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -216,32 +216,86 @@
 
     <!-- Footer Menu -->
     <footer>
+
         <article id="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
+                    <address class="address-font">
+                        <a class="more-info-links" href="#">
+                            <h3>OsloActivities AS</h3>
+                        </a>
+                        <p>Hovedkontor:</p>
+                        Solglimtveien 123B
+                        0480 Oslo
+                        Norge
+                    </address>
                 </section>
 
                 <section id="col2">
                     <span id="icon" class="fa fa-phone" alt="Telefon"></span>
 
+                    <address class="address-font">
+                        <h3>Kontakt oss</h3>
+                        <p>Tlf.: 12 34 56 78</p>
+                    </address>
                 </section>
 
                 <section id="col3">
                     <span id="icon" class="fa fa-info" alt="Info"></span>
                     <span>
+                        <h3> Mer Info</h3>
                         <div class="more-info-tab">
-                            <!--dersom tabben under bli borte vil ikke dropdown oppe funke + java ofc-->
-                            <button id="toggle-tab" class="more-info-tab-button">
+                            <button id="toggle-tab" class="more-info-tab-button" aria-label="expand info menu">
+                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                    viewBox="2 1 20 20" alt=" Nedover pil">
+                                    <path fill-rule="evenodd"
+                                        d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
+                                </svg>
                             </button>
+                        </div>
+                        <div id="more-info-tab" class="more-info-tabcontent">
+                            <a class="more-info-links"
+                                href="#">Arrangementsoversikt</a>
+                            <a class="more-info-links" href="#">For
+                                studenter</a>
+                            <a class="more-info-links" href="#">Ledige
+                                stillinger</a>
+                            <a class="more-info-links"
+                                href="#">Personvernerklæring
+                                og <br> informasjonskapslar</a>
+                            <a class="more-info-links" href="#">Pressekontakt</a>
+                            <a class="more-info-links"
+                                href="#">Tilgjengelegheitserklæring</a>
+                            <a class="more-info-links"
+                                href="#">Admin</a>
                         </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
         </article>
-        <nav id="mediabox"></nav>
+        <!-- Social Media links -->
+        <nav id="mediabox">
+
+            <ul class="media">
+                <li>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
+                </li>
+
+                <li>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
+                </li>
+
+                <li>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
+                </li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
