--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -44,7 +44,7 @@
 
 
         <article class="category-box-container">
-            <a href="#uteliv" class="category-box">
+            <a href="https://www.visitoslo.com/no/spise-og-drikke/uteliv/" class="category-box">
                 <h2> Uteliv </h2>
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
@@ -61,7 +61,7 @@
                 </p>
             </a>
 
-            <a href="#kafe" class="category-box">
+            <a href="https://www.visitoslo.com/no/spise-og-drikke/kaffe--kake/" class="category-box">
                 <h2> Kafé </h2>
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
@@ -78,7 +78,7 @@
                 </p>
             </a>
 
-            <a href="#attraksjoner" class="category-box">
+            <a href="https://www.visitoslo.com/no/aktiviteter-og-attraksjoner/attraksjoner/" class="category-box">
                 <h2> Attraksjoner </h2>
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
@@ -95,7 +95,7 @@
                 </p>
             </a>
 
-            <a href="#aktiviteter" class="category-box">
+            <a href="https://www.visitoslo.com/no/aktiviteter-og-attraksjoner/aktiviteter/" class="category-box">
                 <h2> Aktiviteter </h2>
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
@@ -113,7 +113,7 @@
                 </p>
             </a>
 
-            <a href="#budsjettvennlig" class="category-box">
+            <a href="https://www.visitoslo.com/no/oslo-for-deg/billig-oslo/budsjettferie/" class="category-box">
                 <h2> Budsjettvennlig </h2>
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
