changed boxes in suggestions

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -145,22 +145,35 @@
 
         <article>
             <!--kommentar til scroll id: endre slik at den stopper før hr?, nå:scroller frem til tittelen..-->
-            <hr id="hr-activity">
             <section class="activity-main-box" id="kafe">
-                <h3>ENDRES TIL NOE ANNET kafé</h3>
+                <h3>Anbefalinger</h3>
                 <!--midlertidig!! bedre måte enn a heleveien?, men koden er responsiv og funker:)-->
                 <!--endre class navn?, neo som mangler..-->
-                <div class="small-img-container">
-                    <a href="https://www.handbakt.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
-                            alt="Bilde 1"></a>
-                    <a href="https://kumi.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 2"></a>
-                    <a href="https://fuglen.no/" class="small-img-box"><img src="/images/cafeBg2.jpg" alt="Bilde 3"></a>
-                    <a href="https://www.laundromat.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
-                            alt="Bilde 4"></a>
-                    <a href="https://pustkaffebar.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
-                            alt="Bilde 5"></a>
-                    <a href="https://cafecathedral.no/" class="small-img-box"><img src="/images/cafeBg2.jpg"
-                            alt="Bilde 6"></a>
+                <div class="small-img-container" >
+                        <a href="https://www.handbakt.no/"class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                            <span class="hover-text">HANDBAKT</span>
+                        </a>
+                        <a href="https://kumi.no/" class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                            <span class="hover-text">KUMI</span>
+                        </a>
+                        <a href="https://fuglen.no/" class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                            <span class="hover-text">FUGLEN</span>
+                        </a>
+                        <a href="https://www.handbakt.no/" class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                            <span class="hover-text">HANDBAKT</span>
+                        </a>
+                        <a href="https://kumi.no/" class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                            <span class="hover-text">KUMI</span>
+                        </a>
+                        <a href="https://fuglen.no/" class="small-img-box">
+                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                            <span class="hover-text">FUGLEN</span>
+                        </a>
                 </div>
             </section>
         </article>
