changed header color

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -10,7 +10,7 @@
     <title> Activities in Oslo </title>
 </head>
 
-<header>
+<header id="activity-header">
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <a href="#" class="img-container">
         <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
